0.02
 - Add examples/ directory.
 - Fix author name.

0.01 2021-10-26T16:44:58+02:00
 - First version.