@@ -1,5 +1,6 @@
 0.02
  - Add examples/ directory.
+ - Add status line to error.
  - Fix author name.
 
 0.01 2021-10-26T16:44:58+02:00
